test/spec_vectors/exports/ok/module_73.wat
(module (memory $a (export "a") 0))