test/spec_vectors/exports/fail/module_36.wat
(module (export "a" (global 0)))